add an exclamination mark to the end of coyote

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
     <h1>Roadrunner Products</h1>
-    <p>Everything you need to catch a coyote</p>
+    <p>Everything you need to catch a coyote!</p>
   </body>
 </html>
